<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".ScoreActivity">

    <TextView
        android:id="@+id/teama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/teama"
        android:textSize="25sp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/score1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:textSize="45sp" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="click"
        android:text="@string/btn3"
        android:textAllCaps="true"/>

    <Button
        android:id="@+id/btn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="click"
        android:text="@string/btn2"
        android:textAllCaps="true"/>

    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="click"
        android:text="@string/btn1"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/reset"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:onClick="reset"
        android:text="@string/reset"
        android:textAllCaps="true" />

</LinearLayout>