<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".RateActivity">

    <EditText
        android:id="@+id/rmb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Input RMB"
        android:inputType="numberDecimal"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hello"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:textSize="35sp" />

    <Button
        android:id="@+id/btn_dollar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="rateClick"
        android:text="@string/btn_dollar_label"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/btn_euro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="rateClick"
        android:text="@string/btn_euro_label"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/btn_won"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="rateClick"
        android:text="@string/btn_won_label"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/open"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:onClick="open"
        android:text="Open Activity" />

</LinearLayout>